# flux

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: factorial.flux  fibonacci.flux
flux/: Cargo.toml
flux/src/: main.rs
flux_base/: Cargo.toml
flux_base/src/: diagnostic.rs  lib.rs  log.rs  source_file.rs
flux_base/src/log/: formatting.rs
flux_base/src/source_file/: tests.rs
flux_driver/: Cargo.toml
flux_driver/src/: lib.rs
flux_lexical/: Cargo.toml
flux_lexical/src/: error.rs  lib.rs  token.rs  token_stream.rs
flux_lexical/src/token/: tests.rs
flux_lexical/src/token_stream/: tests.rs
flux_semantic/: Cargo.toml
flux_semantic/src/: arena.rs  control_flow_graph.rs  error.rs  interpreter.rs  lib.rs  program.rs
flux_semantic/src/control_flow_graph/: instruction.rs  tests.rs
flux_semantic/src/interpreter/: stack.rs  value.rs
flux_syntax/: Cargo.toml
flux_syntax/src/: error.rs  lib.rs  parser.rs  syntax_tree.rs
flux_syntax/src/syntax_tree/: declaration.rs  expression.rs  program.rs  statement.rs  tests.rs
flux_syntax/src/syntax_tree/declaration/: tests.rs
flux_syntax/src/syntax_tree/expression/: tests.rs
flux_syntax/src/syntax_tree/statement/: tests.rs
flux_test/: Cargo.toml
flux_test/src/: input.rs  lib.rs
