[package]
name = "flux_base"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
getset = { workspace = true }
tempfile = { workspace = true }
memmap = { workspace = true }
ouroboros = { workspace = true }
thiserror = { workspace = true }
derive-new = { workspace = true }
