[package]
name = "flux_driver"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux_base = { path = "../flux_base" }
flux_lexical = { path = "../flux_lexical" }
flux_syntax = { path = "../flux_syntax" }
flux_semantic = { path = "../flux_semantic" }
clap = { workspace = true }
