[package]
name = "flux_lexical"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux_base = { path = "../flux_base" }
getset = { workspace = true }
enum-as-inner = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }

[dev-dependencies]
flux_test = { path = "../flux_test" }
proptest = { workspace = true }
